unpackaged/main/default/objects/Deal_Statement_Summary__c/Deal_Statement_Summary__c.object-meta.xml
<CustomObject>
    <description>US-0010376 - [NA Deal Statement] Monthly Statement Summary and Approval</description>
    <label>Deal Statement Summary</label>
    <nameField>
        <displayFormat>DSS-{00000}</displayFormat>
        <label>Deal Statement Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Statement Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>