unpackaged/main/default/objects/Deal_Statement_Summary__c/fields/Deal_Site__c.field-meta.xml
<CustomField>
    <fullName>Deal_Site__c</fullName>
    <defaultValue>&quot;US&quot;</defaultValue>
    <description>US-0010376 - [NA Deal Statement] Monthly Statement Summary and Approval</description>
    <label>Deal Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>