unpackaged/main/default/objects/Deal_Statement_Summary__c/fields/Statement_Type__c.field-meta.xml
<CustomField>
    <fullName>Statement_Type__c</fullName>
    <description>US-0010376 - [NA Deal Statement] Monthly Statement Summary and Approval</description>
    <label>Statement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Statement</fullName>
            </value>
            <value>
                <fullName>Final Statement</fullName>
            </value>
            <value>
                <fullName>Adjusted Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>