unpackaged/main/default/objects/Deal_Statement_Summary__c/fields/Summary_Name__c.field-meta.xml
<CustomField>
    <fullName>Summary_Name__c</fullName>
    <description>US-0010376 - [NA Deal Statement] Monthly Statement Summary and Approval</description>
    <formula>TEXT(Month__c)+&#39;-&#39;+TEXT(Year__c)+&#39;-&#39;+TEXT(Statement_Type__c)</formula>
    <label>Summary Name</label>
    <type>Text</type>
</CustomField>