unpackaged/main/default/objects/Deal_Statement_Summary__c/listViews/Daily_Deals_Finance_Deal_Statement_Summary.listView-meta.xml
<ListView>
    <fullName>Daily_Deals_Finance_Deal_Statement_Summary</fullName>
    <filterScope>Queue</filterScope>
    <label>Daily Deals Finance</label>
    <queue>Daily_Deals_Finance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>